# opencode-rust

./: .gitignore  AGENTS.md  AGENT_INTEGRATION.md  API.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  EVALUATION_REPORT.md  FINAL_STATUS.md  FIXES_APPLIED.md  IMPLEMENTATION_PLAN.md  LICENSE  MIGRATION_GUIDE.md  PROGRESS.md  PROJECT_SCOPE.md  README.md  ROADMAP.md  SETUP_API_KEY.md  TECH_DEBT.md  TUI_CONFIG_IMPLEMENTATION.md  USAGE.md  V02_SCOPE_CHECKLIST.md
.cursor/rules/: design_system_rules.mdc
.github/workflows/: ci.yml
.opencode/sessions/12624b6f-786c-4e6f-87ad-40f47050a47a/: session.json
.opencode/sessions/29e4032d-7a04-4f6a-ae59-19bab31f41db/: session.json
.opencode/sessions/31de0088-cc2c-4804-9693-3a27b0503aec/: session.json
.opencode/sessions/3f5e203b-f24e-41ff-86bf-d10619949300/: session.json
.opencode/sessions/4248b04c-7475-4081-af7a-df1d551fcaf8/: session.json
.opencode/sessions/4b456473-dbe6-4bd3-ba48-d4429a7ff45c/: session.json
.opencode/sessions/4b91efb3-f592-465b-bf64-c6fdbbd2ff54/: session.json
.opencode/sessions/55df7973-9b40-4a76-ad32-cebe9bfebf6f/: session.json
.opencode/sessions/56fd98dd-78a5-4bb9-82a7-f51fed7480b8/: session.json
.opencode/sessions/64928057-6ada-4971-aefc-a1cfcace710e/: session.json
.opencode/sessions/714c2ad9-7547-4f08-be35-91a2139bd7e9/: session.json
.opencode/sessions/7598ff8d-f94a-459e-b9da-047690157423/: session.json
.opencode/sessions/804e1217-394b-444c-9d18-159e88a7db88/: session.json
.opencode/sessions/8fd42592-6ddd-4c77-a268-a377afc1314f/: session.json
.opencode/sessions/afe14d92-c44c-4694-82fb-e64b87bb125d/: session.json
.opencode/sessions/d71f9a2a-69f0-423a-918d-36fa828f26cb/: session.json
docs/: README.md
docs/archive/: COMPLETION_REPORT.md  DIFFERENCES_FIXED.md  ENHANCEMENTS_COMPLETE.md  FINAL_FEATURES.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_FIXES.md  PLAN_VS_ACTUAL.md  README.md  README_DIFF.md  UI_IMPROVEMENTS.md
opencode-app/: index.html  package-lock.json  package.json  vite.config.js
opencode-app/src/: App.vue
opencode-app/src-tauri/: Cargo.toml  tauri.conf.json
opencode-app/src-tauri/.opencode/: config.json
opencode-app/src-tauri/.opencode/sessions/42960664-d825-4306-84c1-3a3479afc58f/: session.json
opencode-app/src-tauri/.opencode/sessions/ae14057d-5535-4294-863f-9e3c174ff8fb/: session.json
opencode-app/src-tauri/.opencode/sessions/bbe94a29-c58c-4259-b5e8-e3f0bc018c07/: session.json
opencode-app/src-tauri/capabilities/: default.json
opencode-app/src-tauri/src/: lib.rs  main.rs
opencode-app/src/components/: AppSidebar.vue
opencode-app/src/router/: index.js
opencode-app/src/styles/: tokens.css
opencode-app/src/views/: Empty.vue  Help.vue  Home.vue  Session.vue  Settings.vue
opencode-cli/: Cargo.toml
opencode-cli/src/: config.rs  lib.rs  main.rs  message_processor.rs  session_store.rs
opencode-cli/src/commands/: app.rs  config.rs  init.rs  mod.rs  run.rs  serve.rs  sessions.rs  tui.rs
opencode-cli/src/tui/: app.rs  keybind.rs  mod.rs  router.rs  state.rs  sync.rs  theme.rs
opencode-cli/src/tui/components/: border.rs  code_block.rs  diff_view.rs  footer.rs  header.rs  link.rs  log_panel.rs  logo.rs  message_view.rs  mod.rs  prompt.rs  sidebar.rs  spinner.rs  syntax_highlighter.rs  tips.rs  toast.rs  todo_item.rs  tool_result.rs  virtual_scroll.rs
opencode-cli/src/tui/screens/: home.rs  mod.rs  session.rs
opencode-cli/src/tui/screens/dialogs/: agent.rs  alert.rs  command.rs  confirm.rs  export_options.rs  help.rs  mod.rs  model.rs  prompt.rs  provider.rs  providers_list.rs  select.rs  session_list.rs  session_rename.rs
opencode-cli/src/tui/utils/: clipboard.rs  editor.rs  mod.rs  terminal.rs  transcript.rs
opencode-core/: Cargo.toml
opencode-core/src/: agent.rs  agent_manager.rs  cache.rs  command.rs  config.rs  error.rs  ids.rs  lib.rs  permission.rs  provider_manager.rs  session.rs  session_state.rs  tests.rs  tool.rs
opencode-core/src/session/: message.rs  mod.rs  role.rs  session.rs
opencode-provider/: Cargo.toml
opencode-provider/src/: adapter.rs  anthropic.rs  cached_provider.rs  common.rs  deep_agent.rs  deep_agent_turn.rs  langchain_adapter.rs  langchain_tool_adapter.rs  lib.rs  message.rs  provider_adapter.rs  tests.rs  trait_.rs
opencode-tools/: Cargo.toml
opencode-tools/src/: lib.rs  registry.rs
opencode-tools/src/tools/: alias.rs  bash.rs  batch.rs  codesearch.rs  edit.rs  glob.rs  grep.rs  ls.rs  lsp.rs  mod.rs  multiedit.rs  patch.rs  question.rs  read.rs  task.rs  tests.rs  todo.rs  tool_wrapper.rs  webfetch.rs  websearch.rs  write.rs
scripts/: build-release.sh  build.sh
tests/: Cargo.toml
tests/integration/: agent_test.rs  basic_test.rs  cache_test.rs  mod.rs  tool_test.rs
