[workspace]
members = [
    "opencode-core",
    "opencode-provider",
    "opencode-tools",
    "opencode-cli",
    "opencode-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenCode Team"]
license = "MIT"
repository = "https://github.com/fanjia1024/opencode-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# TUI
ratatui = "0.27"
crossterm = "0.28"

# File system
walkdir = "2.4"

# Regex and glob
regex = "1.11"
globset = "0.4"

# JSON Schema
schemars = { version = "0.8", features = ["derive"] }

# HTTP client (for langchain-rust or direct API calls)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# langchain-ai-rust is a required dependency in opencode-provider (version 5.0.1, crates.io only)

# Syntax highlighting
syntect = "5.0"

# Virtual scrolling
tui-scrollview = "0.1"

# Caching
lru = "0.12"
dashmap = "5.5"
