[package]
name = "opencode-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "opencode_cli"
path = "src/lib.rs"

[[bin]]
name = "opencode"
path = "src/main.rs"

[dependencies]
opencode-core = { path = "../opencode-core" }
opencode-provider = { path = "../opencode-provider" }
opencode-tools = { path = "../opencode-tools" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
tklog = "0.2"
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
