[package]
name = "opencode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }
schemars = { workspace = true }
dirs = "5.0"
lru = { workspace = true }
dashmap = { workspace = true }
