[package]
name = "opencode-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opencode-core = { path = "../opencode-core" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
futures = "0.3"
uuid = { workspace = true }
chrono = { workspace = true }
langchain-ai-rust = "5.0.1"
