[package]
name = "opencode-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opencode-core = { path = "../opencode-core" }
opencode-provider = { path = "../opencode-provider" }
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1"

